# marimo-precompute

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
examples/: lj_dimer_precompute.py
src/marimo_precompute/: __init__.py  decorator.py  numpy_json.py  patch.py  registry.py  sweep.py  wasm_store.py
templates/: github-actions.yml
tests/: test_decorator.py  test_e2e_wasm.py  test_numpy_json.py  test_registry.py  test_wasm_pyodide.mjs  test_wasm_store.py
