[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo-precompute"
version = "0.1.2"
description = "Precompute and cache expensive notebook computations for static WASM deployment"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "marimo",
]

[project.scripts]
marimo-precompute = "marimo_precompute.sweep:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marimo_precompute"]
