[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo-precompute"
version = "0.3.5"
description = "Precompute and cache expensive notebook computations for static WASM deployment"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "marimo>=0.23.2",
]
e2e = [
    "pytest",
    "pytest-timeout",
    "marimo>=0.23.2",
    "matplotlib",
    "playwright",
]

[project.scripts]
marimo-precompute = "marimo_precompute.sweep:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marimo_precompute"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/marimo_precompute/__init__.py" = ["E402"]
